syntax = "proto3";
package notification;

message NotificationObjectResponse {
}

message BaseResponse {
    bool success = 1;
}

// Request: get list message group
message GetNotificationRequest {
  string group_id = 1;
  int32 off_set = 2;
  int64 last_message_at = 3;
}
// Response: GetMessagesInGroupResponse
message GetNotificationResponse {
  repeated NotificationObjectResponse lst_message = 1;
}

// Method
service Notification {

}
